Bug 92014 - program hangs when plotting arcsin and arccos
Summary: program hangs when plotting arcsin and arccos
Status: RESOLVED FIXED
Alias: None
Product: kmplot
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Klaus-Dieter M
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-10-24 17:31 UTC by Peter Ambroz
Modified: 2004-10-28 01:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Ambroz 2004-10-24 17:31:06 UTC
Version:           1.0.9 (using KDE KDE 3.3.0)
Installed from:    Compiled From Sources
Compiler:          gcc 3.3.4 3.3.4-r1
OS:                Linux

The program stops responding after the attempt to plot either of these functions: f(x)=arcsin(x)   f(x)=arccos(x)
There is no problem with other functions i.e. arctan(x).
maybe problem with my computer?
AMD Athlon XP 1800+, 256MB, nVidia GeForce 4 MX440 64MB DDR
running Gentoo linux with kernel 2.6.9-gentoo-r1
Comment 1 Fredrik Edemar 2004-10-28 01:13:21 UTC
CVS commit by fedemar: 

Fix for bug 92014: program hangs when plotting arcsin and arccos.

BUG: 92014


  M +1 -10     View.cpp   1.90.2.3


--- kdeedu/kmplot/kmplot/View.cpp  #1.90.2.2:1.90.2.3
@@ -371,16 +371,7 @@ void View::plotfkt(int ix, QPainter *pDC
                                 
                                 if ( dgr.xclipflg || dgr.yclipflg)
-                                {
-                                        if(mflg>=1)
                                                 p1=p2;
                                         else
                                         {   
-                                                pDC->drawLine(p1, p2);
-                                                p1=p2;
-                                                mflg=1;
-                                        }
-                                }
-                                else
-                                {
                                         if(mflg<=1)
                                                 pDC->drawLine(p1, p2);