Fix for bug 92014: program hangs when plotting arcsin and arccos.

BUG: 92014

svn path=/branches/KDE_3_3_BRANCH/kdeedu/kmplot/; revision=358360